--- a/index.html
+++ b/index.html
@@ -117,18 +117,25 @@
 
 <script>
     function fetchMetrics() {
-    $.get('https://67ce-68-229-28-82.ngrok-free.app/metrics', function(data) {
-        console.log("Data received from API:", data);  // Debug line
-        $('#serverCount').text(data.serverCount);
-        $('#watcherCount').text(data.watcherCount);
-    }).fail(function() {
-        console.log("Failed to fetch data from API");  // Debug line
-    });
-}
-
+        $.ajax({
+            url: 'https://67ce-68-229-28-82.ngrok-free.app/metrics',
+            method: 'GET',
+            headers: {
+                "ngrok-skip-browser-warning": "69420"
+            },
+            success: function(data) {
+                $('#serverCount').text(data.serverCount);
+                $('#watcherCount').text(data.watcherCount);
+            },
+            error: function(error) {
+                console.log('Error:', error);
+            }
+        });
+    }
     // Fetch every 5 seconds
     setInterval(fetchMetrics, 5000);
 </script>
+
 
 </body>
 </html>
