--- a/faq.html
+++ b/faq.html
@@ -51,6 +51,8 @@
     <div class="faq-item">
         <h4>How do I find a User ID or Channel ID?</h4>
         <p>In Discord, go to your settings > Appearance and turn on 'Developer Mode'. Now you can right-click on a channel or user to copy their ID.</p>
+        <p>or...</p>
+        <p>In Discord, go to your settings > Advanced and turn on 'Developer Mode'. Now you can right-click on a channel or user to copy their ID.</p>
     </div>
 
     
