--- a/about.html
+++ b/about.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Discord Translator</title>
+    <title>Discord Translator</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="Discord Translator - About">
+    <meta property="og:description" content="Break down language barriers effortlessly in your Discord server with Discord Translator.">
+    <meta property="og:image" content="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_816f6fc3-33ab-4351-95c8-88fb2dfb94fb.jpg?raw=true">
+    <meta property="og:url" content="https://discordtranslator.com/about.html">
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Discord Translator - About">
+    <meta name="twitter:description" content="Break down language barriers effortlessly in your Discord server with Discord Translator.">
+    <meta name="twitter:image" content="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_816f6fc3-33ab-4351-95c8-88fb2dfb94fb.jpg?raw=true">
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true">
     <style>
         /* Custom Styles */
         .section-bg {
