--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <!-- Hero Section -->
 <section class="hero-section text-center">
     <div class="container">
-        <h1>Hello, World Citizens! <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="width:100px;"></h1>
+        <h1>Hello there, language enthusiast! <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="width:100px;"></h1>
         <p class="lead">Break down language barriers effortlessly in your Discord server with Discord Translator.</p>
         <p>Servers: <span id="serverCount"></span> | Watchers: <span id="watcherCount"></span> | Watched: <span id="watchedCount"></span> | Translations: <span id="translationCount"></span></p>
         <a id="inviteLink" href="#" class="btn btn-primary btn-lg">Invite to Discord</a>
