--- a/index.html
+++ b/index.html
@@ -127,12 +127,22 @@
 
 <!-- Tutorial Section -->
 <section class="container my-5">
-    <h2 class="text-center mb-4">How to Get Started</h2>
-    <ol>
-        <li>Click the 'Invite to Discord' button above to add the bot to your server.</li>
-        <li>Use the command <code>!TranslatorBot help</code> to configure language preferences.</li>
-        <li>Sit back and let Discord Translator do the work. Enjoy seamless conversations!</li>
-    </ol>
+    <div class="row">
+        <!-- Column for the text -->
+        <div class="col-md-6">
+            <h2 class="text-center mb-4">How to Get Started</h2>
+            <ol>
+                <li>Click the 'Invite to Discord' button above to add the bot to your server.</li>
+                <li>Use the command <code>!TranslatorBot help</code> to configure language preferences.</li>
+                <li>Sit back and let Discord Translator do the work. Enjoy seamless conversations!</li>
+            </ol>
+        </div>
+        
+        <!-- Column for the image -->
+        <div class="col-md-6">
+            <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/translator1.png?raw=true" alt="Tutorial Image" class="img-fluid">
+        </div>
+    </div>
 </section>
 
 <!-- Privacy Section -->
