--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@
         }
     </style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
+    <style>
+        .custom-img-size {
+            width: 400px;
+            height: 300px;
+        }
+    </style>
+    
 </head>
 <body>
 
@@ -140,10 +146,11 @@
         
         <!-- Column for the image -->
         <div class="col-md-6">
-            <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/translator1.png?raw=true" alt="Tutorial Image" class="img-fluid">
+            <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/translator1.png?raw=true" alt="Tutorial Image" class="img-fluid custom-img-size">
         </div>
     </div>
 </section>
+
 
 <!-- Privacy Section -->
 <section class="container my-5 bg-light-blue">
