--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             position: absolute;
             top: 35%;
             right: 2%;
+            max-width: calc(100% - 10px);  /* Added this line */
             transform: translateY(-50%);
         }
     </style>
