--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
 <script>
     // New script to rotate the greeting
     let greetings = [
+        "Hello there, language enthusiast!", // English
         "Hallo dort, Sprachenthusiast!",     // German
         "Bonjour là-bas, passionné de langue!", // French
         "Hello there, language enthusiast!", // English
