--- a/index.html
+++ b/index.html
@@ -157,22 +157,23 @@
         </div>
     </section>
     
-    <!-- Tutorial Section -->
-    <section class="container my-5">
-        <div class="row">
-            <div class="col-md-6">
-                <h2 class="text-center mb-4">How to Get Started</h2>
-                <ol>
-                    <li>Click the 'Invite to Discord' button above to add the bot to your server.</li>
-                    <li>Use the command <code>!TranslatorBot help</code> to configure language preferences.</li>
-                    <li>Sit back and let Discord Translator do the work. Enjoy seamless conversations!</li>
-                </ol>
-            </div>
-            <div class="col-md-6">
-                <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/translator1.png?raw=true" alt="Tutorial Image" class="img-fluid custom-img-size">
-            </div>
+<!-- Tutorial Section -->
+<section class="container my-5">
+    <div class="row">
+        <div class="col-sm-6"> <!-- Changed to col-sm-6 -->
+            <h2 class="text-center mb-4">How to Get Started</h2>
+            <ol>
+                <li>Click the 'Invite to Discord' button above to add the bot to your server.</li>
+                <li>Use the command <code>!TranslatorBot help</code> to configure language preferences.</li>
+                <li>Sit back and let Discord Translator do the work. Enjoy seamless conversations!</li>
+            </ol>
         </div>
-    </section>
+        <div class="col-sm-6"> <!-- Changed to col-sm-6 -->
+            <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/translator1.png?raw=true" alt="Tutorial Image" class="img-fluid custom-img-size">
+        </div>
+    </div>
+</section>
+
     
     <!-- Privacy Section -->
     <section class="container my-5 bg-light-blue">
