--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@
             </ul>
         </div>
     </nav>
+
+     <!-- After your <nav> element -->
+    <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="position:absolute; top:50px; right:0; width:100px; margin-bottom:20px;">
+
     
     <!-- Hero Section -->
     <section class="hero-section text-center">
         <div class="container">
             <div class="d-flex align-items-center justify-content-center" style="position: relative;">
-                <!-- Logo Container -->
-                <div id="static-logo-container" style="position: absolute; right: 20px;">
-                    <img id="static-logo" src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="width:140px;">
-                </div>
                 <!-- Greeting Wrapper -->
                 <div id="greeting-wrapper">
                     <!-- Rotating greeting will be inserted here by JavaScript -->
