--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 </head>
 <body>
 
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="https://discordtranslator.com">Discord Translator</a>
@@ -116,8 +117,8 @@
         </div>
     </nav>
 
-    <!-- After your <nav> element -->
-    <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="position:absolute; top:50px; right:0; width:100px; margin-bottom:20px;">
+    <!-- Logo outside Navbar -->
+    <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="position:absolute; top:50px; right:0; width:100px; z-index: 100;">
     
     <!-- Hero Section -->
     <section class="hero-section text-center">
