--- a/donations.html
+++ b/donations.html
@@ -3,123 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discord Translator</title>
+    <title>Discord Translator - Support Us</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="Discord Translator - Donations">
+    <meta property="og:title" content="Discord Translator - Support Us">
     <meta property="og:description" content="Break down language barriers effortlessly in your Discord server with Discord Translator.">
     <meta property="og:image" content="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_816f6fc3-33ab-4351-95c8-88fb2dfb94fb.jpg?raw=true">
-    <meta property="og:url" content="https://discordtranslator.com/donations.html">
+    <meta property="og:url" content="https://discordtranslator.com/support-us.html">
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Discord Translator - Donations">
+    <meta name="twitter:title" content="Discord Translator - Support Us">
     <meta name="twitter:description" content="Break down language barriers effortlessly in your Discord server with Discord Translator.">
     <meta name="twitter:image" content="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_816f6fc3-33ab-4351-95c8-88fb2dfb94fb.jpg?raw=true">
     <!-- Favicons -->
     <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true">
     <style>
         /* Custom Styles */
-        .donate-section {
+        .support-section {
             background-color: #f9f9f9;
             padding: 50px 0;
         }
-        .donate-icon {
+        .support-icon {
             font-size: 40px;
             margin-bottom: 20px;
         }
         .btn:hover {
             transform: scale(1.05);
         }
-        /* New styles for donation gauge */
-        .donation-gauge {
-            width: 100%;
-            background-color: #ccc;
-        }
-        .donation-fill {
-            text-align: center;
-            width: 50%; /* Modify this width to match the actual donation level */
-            background-color: green;
-            padding: 10px;
-            color: white;
-        }
     </style>
 </head>
 <body>
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="https://discordtranslator.com">Discord Translator</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="faq.html">FAQ</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="donations.html">Donations</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-<!-- Logo -->
-<img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="position:absolute; top:50px; right:0; width:100px; margin-bottom:20px;">
-
-<!-- Donation Gauge Section -->
-<section class="text-center" style="padding: 20px;">
-    <h2>Donation Progress</h2>
-    <div class="donation-gauge">
-        <div class="donation-fill">
-            50% <!-- Modify this percentage to match the actual donation level -->
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="https://discordtranslator.com">Discord Translator</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="faq.html">FAQ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="support-us.html">Support Us</a>
+                </li>
+            </ul>
         </div>
-    </div>
-</section>
+    </nav>
 
-<!-- Donate Section -->
-<section class="donate-section text-center">
-    <div class="container">
-        <h1><i class="fas fa-hand-holding-heart donate-icon"></i> Support Discord Translator</h1>
-        <p>Your donations help us keep the project alive and running. Thank you for your support!</p>
+    <!-- After your <nav> element -->
+    <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="position:absolute; top:50px; right:0; width:100px; margin-bottom:20px;">
 
-        <!-- PayPal -->
-        <div class="mb-4">
-            <a href="https://paypal.me/AcidAlchamy" class="btn btn-primary btn-lg"><i class="fab fa-paypal"></i> Donate with PayPal</a>
+    <!-- Support Section -->
+    <section class="support-section text-center" style="padding-top: 120px;">
+        <div class="container">
+            <h1><i class="fas fa-hand-holding-heart support-icon"></i> Support Discord Translator</h1>
+            <p>Your support helps us keep the project alive and running. Thank you!</p>
+
+            <!-- PayPal -->
+            <div class="mb-4">
+                <a href="https://paypal.me/AcidAlchamy" class="btn btn-primary btn-lg"><i class="fab fa-paypal"></i> Support via PayPal</a>
+            </div>
+
+            <!-- CashApp -->
+            <div class="mb-4">
+                <a href="https://cash.app/$AcidAlchamy" class="btn btn-success btn-lg"><i class="fas fa-dollar-sign"></i> Support via CashApp</a>
+            </div>
+
+            <!-- Bitcoin Network -->
+            <div class="mb-4">
+                <span><i class="fab fa-bitcoin"></i> Bitcoin Address:</span><br>
+                <input type="text" value="bc1q9hkvqjnxlexn9hqj9feuxl0lxc0ew9crxf9yld" id="btc-address" readonly><br>
+                <button onclick="copyToClipboard('btc-address')" class="btn btn-info">Copy Address</button>
+            </div>
+
+            <!-- Bitcoin Lightning Network -->
+            <div class="mb-4">
+                <span><i class="fas fa-bolt"></i> Bitcoin Lightning Address:</span><br>
+                <input type="text" value="lnbc1pj37jz6dqdgdshqw84trk44fvx8qax5eqdx2fwkjx8wkgtw2sxzq68wdq83tk3qdqdptwdjkxvv4jxx2cf3d88u3u8exa9r5j35u5g9a04s49mj4xpr3auuuqv8n" id="lightning-address" readonly><br>
+                <button onclick="copyToClipboard('lightning-address')" class="btn btn-info">Copy Address</button>
+            </div>
+
         </div>
+    </section>
 
-        <!-- Crypto -->
-        <h3>Or donate with cryptocurrency</h3>
-        <textarea id="crypto" readonly>BTC: xxxxxxx
-ETH: xxxxxxx</textarea>
-        <button onclick="copyToClipboard('crypto')" class="btn btn-secondary">Copy</button>
-    </div>
-</section>
+    <!-- Footer -->
+    <footer class="text-center bg-dark text-white py-4">
+        <p>&copy; 2023 Discord Translator. All rights reserved.</p>
+    </footer>
 
-<!-- Footer -->
-<footer>
-    <div class="container text-center">
-        <p>&copy; 2023 Discord Translator. All Rights Reserved.</p>
-    </div>
-</footer>
-
-<!-- Scripts -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script>
-    function copyToClipboard(elementId) {
-        var copyText = document.getElementById(elementId);
-        copyText.select();
-        copyText.setSelectionRange(0, 99999); // For mobile devices
-        document.execCommand("copy");
-        alert("Copied: " + copyText.value);
-    }
-</script>
-
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        // JavaScript function to copy text to clipboard
+        function copyToClipboard(id) {
+            var text = document.getElementById(id);
+            text.select();
+            document.execCommand('copy');
+        }
+    </script>
 </body>
 </html>
