--- a/donations.html
+++ b/donations.html
@@ -59,6 +59,18 @@
     <!-- After your <nav> element -->
     <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="position:absolute; top:50px; right:0; width:100px; margin-bottom:20px;">
 
+    <!-- Intro Section -->
+    <section class="intro-section text-center">
+        <div class="container">
+            <h2>Why Support Discord Translator?</h2>
+            <p>
+                Your contribution supports the development and maintenance of Discord Translator, an innovative platform designed to break down language barriers in Discord servers across the globe. 
+                Your generosity ensures that we can continue to offer high-quality translation services for free, fostering global connections and making the web a more inclusive place. 
+                Thank you for believing in our mission.
+            </p>
+        </div>
+    </section>
+
     <!-- Support Section -->
     <section class="support-section text-center" style="padding-top: 120px;">
         <div class="container">
@@ -89,6 +101,10 @@
                 <button onclick="copyToClipboard('lightning-address')" class="btn btn-info">Copy Address</button>
             </div>
 
+            <!-- BuyMeACoffee -->
+            <div class="mb-4">
+                <a href="https://www.buymeacoffee.com/acidalchamy" class="btn btn-warning btn-lg"><i class="fas fa-coffee"></i> Buy Me A Coffee</a>
+            </div>
         </div>
     </section>
 
