--- a/faq.html
+++ b/faq.html
@@ -45,7 +45,7 @@
                 <a class="nav-link" href="faq.html">FAQ</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="donations.html">Donations</a>
+                <a class="nav-link" href="support-us.html">Donations</a>
             </li>
         </ul>
     </div>
