--- a/donations.html
+++ b/donations.html
@@ -31,6 +31,11 @@
         .btn:hover {
             transform: scale(1.05);
         }
+        .intro-section {
+            background-color: #eee;
+            padding: 40px 0;
+            margin-top: 150px; /* Adding margin-top to avoid overlap */
+        }
     </style>
 </head>
 <body>
