--- a/donations.html
+++ b/donations.html
@@ -37,6 +37,7 @@
             margin-top: 150px; /* Adding margin-top to avoid overlap */
         }
     </style>
+    <script src="script.js" defer></script>
 </head>
 <body>
 
@@ -105,7 +106,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- Support Section -->
     <section class="support-section text-center" style="padding-top: 120px;">
         <div class="container">
